cabal-version: 2.2

name: lang
version: 0.1.0.0

common common
  build-depends:
    , base
    , relude
  mixins:
    , base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude
  default-language: Haskell2010
  default-extensions:
    BlockArguments
    DerivingStrategies
    FlexibleInstances
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
  ghc-options:
    -Wall
    -Wcompat
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=missing-fields
    -Werror=missing-methods
    -Werror=partial-fields
    -Widentities
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints

common executable
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import: common
  hs-source-dirs: src
  build-depends:
    , Earley
    , megaparsec
    , pretty-simple
    , repline
  exposed-modules:
    Lang
    Lang.Evaluator
    Lang.Expression
    Lang.Lexer
    Lang.Parser
    Lang.Printer
    Lang.Repl
    Lang.Token

executable template
  import:
    , common
    , executable
  main-is: src/Main.hs
  build-depends: lang
